--- a/themes/commerce_kickstart_admin/contrib.css
+++ b/themes/commerce_kickstart_admin/contrib.css
@@ -431,28 +431,32 @@ table th {
     -moz-linear-gradient(
       -90deg,
       #ffffff 0px,
-      #f9f9f9 100%);
+      #efeded 100%);
   background-image:
     -webkit-gradient(
       linear,
       left top,
       left bottom,
       color-stop(0.0, rgba(255, 255, 255, 1.0)),
-      color-stop(1.0, rgba(249, 249, 249, 1.0))
+      color-stop(1.0, rgba(239, 239, 239, 1.0))
     );
   background-image:
     -webkit-linear-gradient(
       -90deg,
       #ffffff 0px,
-      #f9f9f9 100%);
+      #efeded 100%);
   background-image:
     linear-gradient(
       -90deg,
       #ffffff 0px,
-      #f9f9f9 100%);
-  -moz-border-radius: 11px 11px 11px 11px;
-  -webkit-border-radius: 11px 11px 11px 11px;
-  border-radius: 11px 11px 11px 11px;
+      #efeded 100%);
+  -moz-border-radius: 8px;
+  -webkit-border-radius: 8px;
+  border-radius: 8px;
+  text-transform: capitalize;
+  font-size: 14px;
+  line-height: 1em;
+  box-shadow: inset 0 0 1px #fff;
 }
 
 .ctools-button-processed:hover {
@@ -460,25 +464,25 @@ table th {
     -moz-linear-gradient(
       -90deg,
       #ffffff 0px,
-      #f1f1f1 100%);
+      #efeded 100%);
   background-image:
     -webkit-gradient(
       linear,
       left top,
       left bottom,
       color-stop(0.0, rgba(255, 255, 255, 1.0)),
-      color-stop(1.0, rgba(241, 241, 241, 1.0))
+      color-stop(1.0, rgba(239, 239, 239, 1.0))
     );
   background-image:
     -webkit-linear-gradient(
       -90deg,
       #ffffff 0px,
-      #f1f1f1 100%);
+      #efeded 100%);
   background-image:
     linear-gradient(
       -90deg,
       #ffffff 0px,
-      #f1f1f1 100%);
+      #efeded 100%);
 }
 
 .ctools-dropbutton-processed.open:hover {
@@ -486,25 +490,25 @@ table th {
     -moz-linear-gradient(
       -90deg,
       #ffffff 0px,
-      #f9f9f9 100%);
+      #efeded 100%);
   background-image:
     -webkit-gradient(
       linear,
       left top,
       left bottom,
       color-stop(0.0, rgba(255, 255, 255, 1.0)),
-      color-stop(1.0, rgba(249, 249, 249, 1.0))
+      color-stop(1.0, rgba(239, 239, 239, 1.0))
     );
   background-image:
     -webkit-linear-gradient(
       -90deg,
       #ffffff 0px,
-      #f9f9f9 100%);
+      #efeded 100%);
   background-image:
     linear-gradient(
       -90deg,
       #ffffff 0px,
-      #f9f9f9 100%);
+      #efeded 100%);
 }
 
 .ctools-dropbutton-processed.open {
@@ -513,6 +517,36 @@ table th {
   box-shadow: 1px 1px 2px rgba(0,0,0,0.25);
 }
 
+.ctools-button li a,
+.views-ui-display-tab-actions .ctools-button-processed input {
+  border: none;
+}
+
+.views-ui-display-tab-actions .ctools-button-processed li a,
+.views-ui-display-tab-actions .ctools-button-processed input,
+.views-display-top .ctools-button-processed li a {
+  padding: 5px 20px;
+}
+
+.views-ui-display-tab-actions .ctools-button-processed .ctools-twisty,
+.views-display-top .ctools-button-processed .ctools-twisty {
+  top: 13px;
+}
+
+.ctools-dropbutton-processed .ctools-content {
+  border-right: 1px solid #fff;
+}
+.ctools-dropbutton-processed .ctools-link {
+  border-left: 1px solid #eaeaea;
+  width: 27px;
+}
+
+.ctools-dropbutton-processed {
+  padding-right: 27px;
+}
+.ctools-twisty {
+  right: 10px;
+}
 /* @end */
 
 /* @group Collapsible */
@@ -543,6 +577,7 @@ table th {
 
 .views-ui-display-tab-actions .ctools-button-processed input {
   color: #0074BD;
+  box-shadow: none;
 }
 
 .views-exposed-form .views-exposed-widget .form-submit {
@@ -651,6 +686,13 @@ table th {
 #edit-field-product-und-add-form .fieldset-legend {
   margin-top: 10px;
   padding: 0;
+}
+
+#module-filter-squeeze .form-item-module-filter-name {
+  clear: none;
+}
+.rules-elements-table {
+  position: relative;
 }
 /* @end */
 
